<resources>
    <string name="app_name">FinalProject</string>

    <!-- One Worders -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="day">Day</string>
    <string name="save">Save</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>


    <!-- Main Menu -->
    <string name="mainMenuTitle">Main Menu</string>
    <string name="buttonToFoodTracker">Food Tracker</string>
    <string name="buttonToActivityTracker">Activity Tracker</string>
    <string name="buttonToThermostat">Thermostat</string>
    <string name="buttonToAutomobile">Automobile</string>


    <!-- Food Tracker -->
    <string name="foodTrackerTitle">Food Tracker</string>
    <string name="button">button_Enter</string>
    <string name="FTapple">APPLE</string>
    <string name="FTLabelAppletotal_fat">Total fat</string>
    <string name="FTAppleLabelcarbohydrate">Carbohydrate</string>
    <string name="FTBananaLabelcalories">Calories</string>
    <string name="FTBananaLabeltotal_fat">Total fat</string>
    <string name="FTBananaLabelcarbohydrate">Carbohydrate</string>
    <string name="FTbananaLabel">BANANA</string>
    <string name="FTBananaCalValue">95</string>
    <string name="FTBananaTotalFatValue">0g</string>
    <string name="FTBananaCarbValue">25g</string>
    <string name="FTAppleCalLabel">Calories</string>
    <string name="FTAppleCalValue">95</string>
    <string name="FTAppleTotalFatValue">0g</string>
    <string name="FTAppleCarbValue">25g</string>
    <string name="FTBtnadd_new_food_item">Add New Food Item</string>
    <string name="FTEditTxtenter_name_of_new_food">Enter Name of new Food</string>


    <!-- Activity Tracker -->
    <string name="activityTrackerTitle">Activity Tracker</string>
    <string name="activityHistoryTitle">Your activity history</string>
    <string name="activityAddTitle">Add a new activity</string>
    <string name="activityDetailTitle">Activity details</string>
    <string name="activityDateHint">Date</string>
    <string name="activityTimeHint">Time spent in minutes</string>
    <string name="activityActivityLabel">Activity</string>
    <string name="activityTime">Time</string>
    <string name="activityNotesTitle">Notes</string>
    <string name="activityNotesHint">ex: This felt easy</string>
    <string name="buttonAddActivity">Add new activity</string>
    <string name="buttonDeleteActivity">Delete</string>
    <string name="buttonEditActivity">Edit</string>
    <string name="buttonActivityHistory">View activity history</string>
    <string-array name="activitiesArray">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Skating</item>
    </string-array>


    <!-- Thermostat -->
    <string name="thermostatAddTitle">Add Entry</string>
    <string name="thermostatEditTitle">Edit Entry</string>
    <string name="thermostatDeleteEntry">Delete Entry</string>
    <string name="thermostatEntriesTitle">Thermostat Entries</string>


    <!-- Automobile -->
    <string name="automobileTitle">Automobile</string>
    <string name="automobileEntriesTitle">Automobile Entries</string>
    <string name="carModel">Car Model</string>
    <string name="gas">Type of gas: </string>
    <string name="price">Gas Price: </string>
    <string name="liters">Liters Purchased: </string>
    <string name="avgKms">Average Kilometers: </string>
    <string name="savePurchase">Save Purchase</string>
    <string name="seeHistory">See History</string>
    <string name="inputGas">Which gas?</string>
    <string name="inputPrice">How much per liter?</string>
    <string name="inputLiters">How many liters?</string>
    <string name="inputAvgKm">Kilometers per Liter</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dateToast">You must enter a date</string>
    <string name="addedSnack">Activity added</string>

</resources>
